Remove autofocus on station search field
It's annoying to have the keyboard popping up and covering most
of the station list, people might find more convenient to scroll the
list and look for a possible station instead of searching.

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
         <section id="stations" hidden>
             <!-- stations list -->
-            <input type="search" autofocus>
+            <input type="search">
             <ol></ol>
             <template>
                 <li>
